@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.95-3
-Date: 2005-02-24
+Date: 2005-02-26
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
